# PacmanOnline

./: .gitignore  CMakeLists.txt  README.md
back/: CMakeLists.txt  README.md  clean.sh  compile.sh  grid.cpp  main  makefile  socket.cpp
back/headers/: entity.h  game.h  ghost.h  grid.h  grid_init.h  ia_ghost.h  pacman.h  parameters.h  virtual_ghost.h
back/server/headers/: route.h  safequeue.h  socket.h
back/server/src/: route.cpp  socket.cpp
back/src/: entity.cpp  game.cpp  ghost.cpp  grid.cpp  ia_ghost.cpp  init.cpp  main.cpp  pacman.cpp  run.cpp  virtual_ghost.cpp
back/test/: CMakeLists.txt  Makefile  clean.sh  unittest  unittest.cpp
back/test/headers_test/: entity_test.h  game_test.h  ghost_test.h  grid_test.h  pacman_test.h  virtual_ghost_test.h
back/test/src_test/: entity_test.cpp  game_test.cpp  ghost_test.cpp  grid_test.cpp  pacman_test.cpp  virtual_ghost_test.cpp
back/test/unittest/: grid_test.cpp  grid_test.h  unittest.cpp
client/: client.js  package-lock.json
googletest-master/googletest/make/: sample1_unittest
static/client/: client.js
static/css/: style.css
static/js/: canvas.js  client.js  ghost.js  grid.js  grid_old.js  pacman.js
views/: game.html  game_over.html  index.html  style.css
views/static/css/: game.css  style.css
views/static/js/: canvas.js  client.js  grid.js  pacman.js
